<resources>
    <string name="app_name">Cung Hoàng Đạo Offical</string>
    <string name="danh_gia">Hoàng Đạo Offical]Xin hãy giúp chúng tôi đóng góp ý kiến cho ứng dụng. </string>
    <string name="gmail">Bạn không có ứng dụng Gmail.Vui lòng tải hoặc gửi email tới gmail: cheng.cit@gmail.com</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Cài đặt</string>
    <string name="menu">Menu</string>
    <string name="link_app">https://play.google.com/store/apps/developer?id=trangchongcheng</string>
    <string name="taitaiday">Tải ứng dụng Tử vi, Cung hoàng đạo tại đây:</string>
    <string name="link_image">http://mxhviet.com/wp-content/uploads/2016/05/ic_laucher.png</string>
    <string name="banner_ads">ca-app-pub-8502836799800950/9397121226</string>
    <string name="banner_content">ca-app-pub-8502836799800950/5891924827</string>
    <string name="banner_video">ca-app-pub-8502836799800950/8066662020</string>
    <string name="banner_startapp">204704060</string>
    <string name="hint_name">Tên đầy đủ</string>
    <string name="zalo">Không tìm thấy ứng dụng Zalo</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Mật khẩu</string>
    <string name="btn_sign_up">Đăng ký</string>
    <string name="err_msg_name">Nhập vào tên đầy đủ</string>
    <string name="err_msg_email">Nhập vào địa chỉ Email</string>
    <string name="err_msg_password">Nhập vào mật khẩu</string>
    <string name="navigation_item_1">Home</string>
    <string name="navigation_item_2">Events</string>
    <string name="starred_string">Starred</string>
    <string name="inbox_string">Inbox</string>
    <string name="sent_mail_string">Sent mail</string>
    <string name="draft_string">Drafts</string>
    <string name="subheader">Subheader</string>
    <string name="trash_string">Trash</string>
    <string name="all_mail_string">All mails</string>
    <string name="spam_string">Spams</string>
    <string name="closeDrawer">Navigation View</string>
    <string name="openDrawer">Navigation View Closed</string>
    <string name="item_first">First event</string>
    <string name="item_default">Event %1d</string>
    <string name="item_last">Last event</string>
    <string name="con_giap">12 CON GIÁP</string>
    <string name="moi_nhat">MỚI NHẤT</string>
    <string name="cung_hoang_dao">12 CUNG HOÀNG ĐẠO</string>
    <string name="new_feed">BÀI VIẾT NỖI BẬT</string>
    <string name="home">Home</string>
    <string name="favourite">Favourite</string>
    <string name="downloaded">Downloaded</string>
    <string name="more">More</string>
    <string name="settings">Settings</string>
    <string name="time_default">1 giờ trước</string>
    <string name="cunghoangdao_name">Cung Bạch Dương</string>
    <string name="cunghoangdao_date">(01/07-24/07)</string>
    <string name="connection">Không thể tải dữ liệu.\nVui lòng kiểm tra lại kết nối và thử lại!</string>
    <string name="thulai">Thử lại</string>
    <string name="chd_bachduong">Cung Bạch Dương (21/03–19/04)</string>
    <string name="chd_kimnguu">Cung Kim Ngưu (20/04–20/05)</string>
    <string name="chd_songtu">Cung Song Tử (21/05–21/06)</string>
    <string name="chd_cugiai">Cung Cự Giải (22/06–22/07)</string>
    <string name="chd_sutu">Cung Sử Tử (23/07–22/08)</string>
    <string name="chd_xunu">Cung Xử Nữ (23/08–22/09)</string>
    <string name="chd_thienbinh">Cung Thiên Bình (23/09–23/10)</string>
    <string name="chd_bocap">Cung Bò Cạp (24/10–21/11)</string>
    <string name="chd_nhanma">Cung Nhân Mã (22/11–21/12)</string>
    <string name="chd_maket">Cung Ma Kết (22/12–19/01)</string>
    <string name="chd_baobinh">Cung Bảo Bình (20/01–18/02)</string>
    <string name="chd_songngu">Cung Song Ngư (19/02–20/03)</string>
    <string name="tuoi_ty">Tuổi Tí</string>
    <string name="tuoi_suu">Tuổi Sửu</string>
    <string name="tuoi_dan">Tuổi Dần</string>
    <string name="tuoi_mao">Tuổi Mão</string>
    <string name="tuoi_thin">Tuổi Thìn</string>
    <string name="tuoi_ti">Tuổi Tỵ</string>
    <string name="tuoi_ngo">Tuổi Ngọ</string>
    <string name="tuoi_mui">Tuổi Mùi</string>
    <string name="tuoi_than">Tuổi Thân</string>
    <string name="tuoi_dau">Tuổi Dậu</string>
    <string name="tuoi_tuat">Tuổi Tuất</string>
    <string name="tuoi_hoi">Tuổi Hợi</string>
    <string name="chd_bachduong_date">(21/03-19/04)</string>
    <string name="chd_kimnguu_date">(20/04-20/05)</string>
    <string name="chd_songtu_date">(21/05-21/06)</string>
    <string name="chd_cugiai_date">(22/06-22/07)</string>
    <string name="chd_sutu_date">(23/07-22/08)</string>
    <string name="chd_xunu_date">(23/08-22/09)</string>
    <string name="chd_thienbinh_date">(23/09-23/10)</string>
    <string name="chd_bocap_date">(24/10-22/11)</string>
    <string name="chd_nhanma_date">(22/11-21/12)</string>
    <string name="chd_maket_date">(22/12-19/01)</string>
    <string name="chd_baobinh_date">(20/01-18/02)</string>
    <string name="chd_songngu_date">(19/02-20/03)</string>
    <string name="danh_muc">Danh mục</string>
    <string name="tien_ich_hay">Tiện ích hay</string>
    <string name="tien_ich">Tiện ích</string>
    <string name="san_pham">Sản phẩm</string>
    <string name="xem_gi">HOT</string>
    <string name="menu_item_tu_vi">Tử vi</string>
    <string name="menu_item_phong_thuy">Phong thủy</string>
    <string name="menu_item_ngay_tot">Ngày tốt</string>
    <string name="menu_item_xem_tuong">Xem tướng</string>
    <string name="menu_item_tam_linh">Tâm linh</string>
    <string name="menu_item_video_phong_thuy">Video phong thủy</string>
    <string name="menu_item_chi_tiet_ve_bạn">Chi tiết về bạn</string>
    <string name="menu_item_download">Tải xuống</string>
    <string name="menu_item_trac_nghiem">Bói cung hoàng đạo</string>
    <string name="menu_item_tu_vi_tron_doi">Tử vi trọn đời</string>
    <string name="menu_item_am_duong">Đổi lịch âm dương</string>
    <string name="menu_item_clip_phongthuy">Clip phong thủy</string>
    <string name="menu_item_thongbao">Nhận thông báo</string>
    <string name="menu_item_binh_chon">Bình chọn cho ứng dụng</string>
    <string name="menu_item_goy_y">Gửi email góp ý</string>
    <string name="cung_nu">Cung Nữ</string>
    <string name="chon_cung">Bạn thuộc cung hoàng đạo nào?</string>
    <string name="cung_nam">Cung Nam</string>
    <string name="btn_ketqua">Xem kết quả</string>
    <string name="text_null">vs</string>
    <string name="share_fb">Chia sẽ lên Facebook</string>
    <string name="share_zalo">Chia sẽ lên Zalo</string>
    <string name="save_offline">Lưu lại đọc Offline</string>
    <string name="boi_ty_chd">Bói tình yêu theo cung hoàng đạo</string>
    <string name="tu_vi_tron_doi">Xem tử vi trọn đời của</string>
    <string name="offine_mess">Chưa có bài viết nào được tải về!</string>
    <string name="khac">Khác</string>
    <string name="chang_language">Đổi ngôn ngữ</string>
    <string name="chi_tiet_ve_ban">Chi tiết về bạn</string>
    <string name="thay_doi_thong_tin">Thay đổi thông tin</string>
    <string name="onBackPress">Bấm quay về lần nữa để thoát ứng dụng</string>
    <string name="loi_thong_tin">Lỗi thông tin</string>
    <string name="loi_thong_tin_chi_tiet"> Vui lòng điền thông tin chính xác</string>
    <string name="khong_co_ket_noi">Không tìm thấy Internet</string>
    <string name="kiem_tra_ket_noi">Vui lòng kiểm tra lại kết nối</string>
    <string name="bat_mang">Bật mạng</string>
    <string name="huy">Hủy bỏ</string>
    <string name="dong_y">Đồng ý</string>
    <string name="loi_ten_dang_ky">Tên không hợp lệ! Tên phải ít nhất 3 kí tự và nhỏ hơn 15 kí tự</string>
    <string name="xin_chao">Xin chào!</string>
    <string name="ban_sinh_ngay">Bạn sinh ngày</string>
    <string name="thuoc_cung">thuộc cung </string>
    <string name="kham_pha"> Hãy cùng khám phá những thông tin thú vị về bạn nào</string>
    <string name="tu_vi">TỬ VI</string>
    <string name="trang_chu">Home</string>
    <string name="nam_truoc">Năm trước</string>
    <string name="thang_truoc">Tháng trước</string>
    <string name="tuan_truoc">Tuần trước</string>
    <string name="ngay_truoc">Ngày trước</string>
    <string name="hom_qua">Hôm qua</string>
    <string name="mot_gio">giờ trước</string>
    <string name="mot_gio_truoc">1 giờ trước</string>
    <string name="mot_phut_truoc">1 phút trước</string>
    <string name="phut_truoc">phút trước</string>
    <string name="giay_truoc">giây trước</string>
    <string name="moi_day">Mới đây</string>
    <string name="thay_doi_ngon_ngu">Thay đổi ngôn ngữ</string>
    <string name="mo_rong">Mở rộng</string>
    <string name="app_id">1041345645929173</string>
    <string name="title_activity_tab_intro">TabIntroActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="toast_exit">Bấm quay lại lần nữa để thoát ứng dụng!</string>
    <string name="luu_thanh_cong">Đã lưu thành công!</string>
    <string name="khoi_dong">Ứng dụng đang khởi chạy…</string>
    <string name="sologan">Ứng dụng bói toán, xem tử vi,tin tức 12 cung hoàng đạo cập nhật hằng ngày</string>
    <string name="mota_home">Cập nhật các bài viết về bói toán, tử vi, cung hoàng đạo… mới nhất theo này.</string>
    <string name="mota_menu">Danh mục những nội dung liên quan đến tử vi, bói toán…</string>
    <string name="mota_tienich">Những tiện ích bói toán hấp dẫn…</string>
    <string name="tu_vi_hom_nay">Xem tử vi 12 cung hoàng đạo hôm nay nào?</string>
    <string name="category_tuvi">Tử vi</string>
    <string name="category_cunghoangdao">Cung hoàng đạo</string>
    <string name="category_video_phongthuy">Video phong thủy</string>
    <string name="category_phongthuy">Phong thủy</string>
    <string name="category_tuongso">Tướng số</string>
    <string name="menu_item_cunghoangdao">Cung hoàng đạo</string>
    <string name="menu_item_tuvi">Tử vi</string>
    <string name="phong_thuy">phong_thuy</string>
    <string name="type_cung_hoang_dao">cung_hoang_dao</string>
    <string name="type_tu_vi">tu_vi</string>
    <string name="xem_tuong">xem_tuong</string>
    <string name="tam_linh">tam_linh</string>
    <string name="video_phong_thuy">video_phong_thuy</string>
    <string name="type_tuoi_ti">tuoi_ti</string>
    <string name="type_tuoi_suu">tuoi_suu</string>
    <string name="type_tuoi_dan">tuoi_dan</string>
    <string name="type_tuoi_mao">tuoi_mao</string>
    <string name="type_tuoi_thin">tuoi_thin</string>
    <string name="type_tuoi_ty">tuoi_ty</string>
    <string name="type_tuoi_ngo">tuoi_ngo</string>
    <string name="type_tuoi_mui">tuoi_mui</string>
    <string name="type_tuoi_than">tuoi_than</string>
    <string name="type_tuoi_dau">tuoi_dau</string>
    <string name="type_tuoi_tuat">tuoi_tuat</string>
    <string name="type_tuoi_hoi">tuoi_hoi</string>
    <string name="loading">Đang tải...</string>
    <string name="tienich_boicunghoangdao">Bói cung hoàng đạo</string>
    <string name="tienich_boingaysinh">Bói tình duyên</string>
    <string name="tienich_boinotruinam">Bói nốt rùi</string>
    <string name="tienich_tuvingaysinh">Tử vi theo ngày sinh</string>
    <string name="tienich_tuvitheothang">Tử vi theo tháng</string>
    <string name="tienich_xemsaohan">Xem sao hạn</string>
    <string name="chon_not_rui">Chọn nốt rùi tra cứu</string>
    <string name="chon_vi_tri">Chọn vị trí nốt rùi</string>
    <string name="chon_nam">Nhập năm cần xem</string>
    <string name="phong_to">* Dùng tay để phóng to ảnh lên.</string>
    <string name="ngay_sinh">Ngày sinh (Dương lịch)</string>
    <string name="chon_ngay">Chọn ngày</string>
    <string name="hinh_thuc">Chuyển sang:</string>
    <string name="thang_can_xem">Tháng cần xem (Âm lịch)</string>
    <string name="gioi_tinh">Giới</string>
    <string name="nam">Nam</string>
    <string name="nu">Nữ</string>
    <string name="duong_lich">Dương lịch</string>
    <string name="am_lich">Âm lịch</string>
</resources>