<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:title="@string/danh_muc">
        <menu>
            <item
                android:id="@+id/itemPhongThuy"
                android:checked="false"
                android:icon="@drawable/ic_star_black"
                android:title="@string/menu_item_phong_thuy" />
            <item
                android:id="@+id/itemNgayTot"
                android:checked="false"
                android:icon="@drawable/ic_star_black"
                android:title="@string/menu_item_ngay_tot" />
            <item
                android:id="@+id/itemTuVi"
                android:checked="false"
                android:icon="@drawable/ic_star_black"
                android:title="@string/menu_item_tu_vi" />
            <item
                android:id="@+id/itemDownload"
                android:checked="false"
                android:icon="@drawable/ic_star_black"
                android:title="@string/menu_item_download" />

        </menu>
        </item>
        <item
            android:title="@string/tien_ich">
            <menu>
                <item
                    android:id="@+id/itemTracNghiem"
                    android:checked="false"
                    android:icon="@drawable/ic_inbox_black"
                    android:title="@string/menu_item_trac_nghiem" />

                <item
                    android:id="@+id/itemAmDuong"
                    android:checked="false"
                    android:icon="@drawable/ic_star_black"
                    android:title="@string/menu_item_am_duong" />

            </menu>
        </item>

    </group>

</menu>