<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="@color/textColorPrimary"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/toolbar" />

    <ScrollView
        android:id="@+id/srv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar"
        android:scrollbarSize="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            android:orientation="vertical">

            <TextView
                style="@style/text_categoryes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/chon_ngay" />

            <TextView
                android:text="20-10-1994"
                android:id="@+id/activity_amduong_tvDate"
                style="@style/text_boi"
                android:background="@drawable/config_spinner" />
            <TextView
                style="@style/text_categoryes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hinh_thuc" />
            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:text="@string/gioi_tinh">

                <RadioButton
                    android:id="@+id/rdoDuonglich"
                    style="@style/text_radio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/duong_lich" />

                <RadioButton
                    android:id="@+id/rdoAmlich"
                    style="@style/text_radio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/am_lich" />
            </RadioGroup>

            <Button
                android:id="@+id/activity_amduong_btnKetqua"
                style="@style/btn_check_result"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/btn_ketqua" />

            <ProgressBar
                android:id="@+id/activity_amduong_progressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:visibility="gone" />

            <WebView
                android:id="@+id/activity_amduong_webview"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="23sp" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>