<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="vertical"
    android:orientation="vertical">
    <include layout="@layout/toolbar" />

<TextView
    android:id="@+id/activity_category_tvMess"
    android:visibility="gone"
    android:layout_gravity="center"
    style="@style/text_categoryes"
    android:text="@string/offine_mess"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" />
    <RelativeLayout
        android:layout_weight="1"
        android:layout_margin="8dp"
        android:layout_width="match_parent"
        android:layout_height="0dp">

        <android.support.v7.widget.RecyclerView
            android:scrollbars="vertical"
            android:id="@+id/activity_category_rcvNews"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <ProgressBar
            android:id="@+id/activity_category_progressbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:visibility="visible" />

        <LinearLayout
            android:id="@+id/activity_category_ll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                style="@style/text_categoryes"
                android:id="@+id/activity_category_tvConnection"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/connection" />

            <Button
                android:id="@+id/activity_category_btnConnect"
                style="@style/btn_check_result"
                android:layout_width="90dp"
                android:layout_height="40dp"
                android:text="@string/thulai" />
        </LinearLayout>
    </RelativeLayout>
    <com.google.android.gms.ads.AdView
        android:id="@+id/activity_category_adView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        ads:adSize="BANNER"
        ads:adUnitId="@string/banner_ads" />
</LinearLayout>

