<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/textColorPrimary"
    android:orientation="vertical">

    <include layout="@layout/toolbar" />

    <ScrollView
        android:id="@+id/srv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar"
        android:scrollbarSize="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            android:orientation="vertical">


            <TextView
                style="@style/text_categoryes"
                android:text="@string/ngay_sinh" />

            <TextView
                android:id="@+id/activity_tuvitheothang_tvDate"
                style="@style/text_boi"
                android:background="@drawable/config_spinner"
                android:text="20-10-1994" />

            <TextView
                style="@style/text_categoryes"
                android:text="@string/thang_can_xem" />

            <TextView
                android:layout_width="10dp"
                android:layout_height="wrap_content" />

            <Spinner
                android:id="@+id/activity_tuvitheothang_spnThang"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="5"
                android:background="@drawable/config_spinner"
                android:spinnerMode="dropdown" />

            <Button
                android:id="@+id/activity_tuvitheothang_btnKetqua"
                style="@style/btn_check_result"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/btn_ketqua" />

            <ProgressBar
                android:id="@+id/activity_tuvitheothang_progressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:visibility="gone" />
            <vn.amobi.util.ads.AmobiAdView
                android:layout_gravity="center"
                android:id="@+id/activity_tuvitheothang_adView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="visible" />
            <WebView
                android:id="@+id/activity_tuvitheothang_webview"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="23sp" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>